@@ -1,4 +1,9 @@
 2012-08-06  Stipe Tolj  <stolj at kannel.org>
+    * test/test_hash.c: simple test program replacing test_md5.c which
+      computes both, MD5 hash digest and a SHA1 hash digest if openssl has
+      been available.
+      
+2012-08-06  Stipe Tolj  <stolj at kannel.org>
     * test/test_dict.c: add a lookup phase too, in order to have a populate
       and lookup phase while testing.
     
